// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен отрендерить вариант c заголовком и контентом 1`] = `
<Fragment>
  <p>
    Далеко-далеко за словесными горами.
  </p>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.<p>",
      }
    }
  />
</Fragment>
`;

exports[`должен отрендерить вариант c заголовком, контентом и картинкой 1`] = `
<figure>
  <img
    src="picture-of-cat"
  />
  <figcaption>
    <p>
      Далеко-далеко за словесными горами.
    </p>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.<p>",
        }
      }
    />
  </figcaption>
</figure>
`;
